cabal-version: 1.12

name:           bril-hs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Github username here/bril-hs#readme>
homepage:       https://github.com/Github username here/bril-hs#readme
bug-reports:    https://github.com/Github username here/bril-hs/issues
author:         Author name here
maintainer:     Author email here
copyright:      2019 Author name here
license:        BSD3
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Github username here/bril-hs

library
  exposed-modules:
      Lib
  other-modules:
      Paths_bril_hs
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable bril-hs-exe
  main-is: Main.hs
  other-modules:
      Paths_bril_hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bril-hs
  default-language: Haskell2010

test-suite bril-hs-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_bril_hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , bril-hs
  default-language: Haskell2010
